--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -2,6 +2,11 @@ name: Check Pull Request
 
 on: pull_request
 
+# Cancel actions when new commits are pushed to PR
+concurrency: 
+    group: ${{ github.head_ref }}
+    cancel-in-progress: true
+
 jobs:
   test:
     runs-on: ubuntu-latest
