--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -2,14 +2,18 @@ name: Check Pull Request
 
 on: pull_request
 
+# Cancel actions when new commits are pushed to PR
+concurrency: 
+    group: ${{ github.head_ref }}
+    cancel-in-progress: true
+
 jobs:
   test:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         python-version: [3.8, 3.9, '3.10']
-        os: [ubuntu-latest, macOS-latest, windows-latest]
 
     steps:
     - uses: actions/checkout@v2
